flux/apps/forgejo-next/forgejo-route.yaml
# Route from traefik to forgejo
# https://doc.traefik.io/traefik/v3.1/routing/providers/kubernetes-crd/#kind-ingressroutetcp
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-next-ssh
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - ssh-next # name from traefik port
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: ssh # forgejo ssh port on kubernetes service
